--- a/calculadora/calculadora.html
+++ b/calculadora/calculadora.html
@@ -8,6 +8,7 @@
 </head>
     <link rel="stylesheet" href="style.css">
 <body>
+    <p><i>© Elder Galvão</i></p>
     <div class="calculadora">
             <h1>Calculadora</h1>
             <div id="res"></div>
